<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicioSesion">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="20dp">


      <TextView
          android:id="@+id/textView"
          android:layout_width="375dp"
          android:layout_marginTop="30dp"
          android:layout_height="54dp"
          android:layout_weight="0.4"
          android:fontFamily="sans-serif"
          android:textAlignment="textStart"
          android:text="@string/IniSec"
          android:textColor="@color/black"
          android:textSize="30dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:background="@color/white"
        android:text="@string/Correo"
        android:textAlignment="textStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/borde"
        android:orientation="horizontal"
        android:padding="12dp">

      <EditText
          android:id="@+id/editTextTextPersonName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="10"
          android:inputType="textPersonName"
          android:text="@string/icorreo" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:background="@color/white"
        android:text="@string/Contraseña"
        android:textAlignment="textStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/borde"
        android:orientation="horizontal"
        android:padding="12dp">



      <EditText
          android:id="@+id/etContraseña"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="10"
          android:inputType="textPersonName"
          android:text="@string/icontra" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">



      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/AunNo"
          android:layout_marginTop="20dp"
          android:textAlignment="textEnd" />

      <TextView
          android:id="@+id/Registrate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/verdeapp"
          android:layout_marginTop="20dp"
          android:layout_weight="1"
          android:text="@string/Registrate" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

      <Button
          android:id="@+id/btnIniciarSesion"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:backgroundTint="@color/verdeapp"
          android:elevation="200dp"
          android:text="@string/IniSec"
          android:translationZ="200dp"
          app:cornerRadius="100dp"
          android:onClick="irAInicio"/>

    </LinearLayout>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>